--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,9 @@ Section: x11
 Priority: optional
 Maintainer: Kylin Team <team+kylin@tracker.debian.org>
 Uploaders: handsome_feng <jianfengli@ubuntukylin.com>,
+           Kevin Duan <duankaiwen@ubuntukylin.com>
 Build-Depends: debhelper-compat (= 13),
+               meson
 Standards-Version: 4.5.0
 Rules-Requires-Root: no
 Vcs-Git: https://github.com/ukui/ukui-wallpapers.git
@@ -11,7 +13,7 @@ Vcs-Browser: https://github.com/ukui/ukui-wallpapers
 
 Package: ukui-wallpapers
 Architecture: all
-Depends: ${misc:Depends}
+Depends: ${misc:Depends},
 Description: Wallpapers for UKUI desktop environment
  The default UKUI wallpaper. Outstanding wallpapers selected
  from Ubuntu Kylin 20.04 Wallpaper Contest. These wallpapers
